[project]
name = "ai-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
    "openai-whisper>=20250625",
    "streamlit>=1.57.0",
    "yt-dlp>=2026.3.17",
]
